--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
   },
   "homepage": "https://github.com/Gabriel-Fachini/Desafio-Toro-Investimentos#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^6.0.14",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2"
   }
 }
